--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.MovieMates"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".ViewEventActivity"
             android:exported="false" />
         <activity
@@ -39,7 +42,7 @@
             android:name=".mymovielistfragment"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivity3"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
