--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:theme="@style/Theme.MovieMates"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".FriendActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity3"
             android:exported="false" />
         <activity
             android:name=".ViewEventActivity"
@@ -42,7 +45,7 @@
             android:name=".mymovielistfragment"
             android:exported="false" />
         <activity
-            android:name=".MainActivity3"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
